# D-Engine

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  D-Engine-BenchRunner.vcxproj  D-Engine-BenchRunner.vcxproj.filters  D-Engine.sln  D-Engine.vcxproj  D-Engine.vcxproj.filters  D-Engine_Handbook.md  EULA.txt  LICENSE.txt  README.md  Roadmap.md  SECURITY.md  bench_report.md  build_log.txt  defaults.json  defaults.md  generate_modules_config.py  mkdocs.yml  module_selector_gui.py  run_audio_test.cpp  sweep_report.md  temp_allsmokes.cmd
.github/: CODEOWNERS  PR_VALIDATION.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/instructions/: CopilotInstructions.instructions.md
.github/workflows/: bench-ci.yml  bench-nightly.yml  bench-sweep.yml  codeql.yml  core-ci.yml  docs-pages.yml  policy-ci.yml
Config/: ModulesConfig.hpp
Core/: CoreMinimal.h  Looger.hpp  Timer.hpp
Core/Plateform/: PlatformMacros.hpp
Docs/: ABI_Interop_Policy.md  ABI_Module_Authoring.md  ABI_Review_Checklist.md  Audio_M0_Status.md  Audio_M1_Status.md  Audio_Vision.md  BenchProtocol.md  Benchmarks.md  Containers.md  D-Engine_v0.1_Scope.md  DeterminismPolicy.md  FileSystem_M0_Status.md  HeaderFirstStrategy.md  INDEX.md  Implementation_Snapshot.md  Input_M0_Status.md  Jobs_M0_Status.md  LanguagePolicy.md  Learning_VTable.md  Math.md  Memory.md  PolicyMatrix.md  Progress_Summary_v0.1.md  RenderVision.md  Renderer_M0_Status.md  Renderer_Vision.md  ThreadingRules.md  TimePolicy.md  Time_M0_Status.md  Window_M0_Status.md  index.md
Docs/architecture/: workspace.dsl
Docs/dev/: bench-protocol.md
Docs/handbook/: index.md
Docs/maps/: abi-and-modules.md  audio.md  index.md  jobs.md  memory.md  renderer-m0.md  time.md
Modules/Input/: ModuleMetadata.json
Modules/Vehicules/: ModuleMetadata.json
cmake/: DngLanguagePolicy.cmake  run_policy_violation_test.cmake.in
tests/: Audio_smoke.cpp  BasicForwardRenderer_smoke.cpp  BenchProbeAllocator.hpp  FileSystem_smoke.cpp  README.md  RendererSystem_BasicForwardRenderer_smoke.cpp  Renderer_BasicForwardRenderer_demo.cpp  Test_BenchDriver.cpp  Test_GlobalNewDelete_BuildOnly.cpp  Test_MemoryRuntimeOverrides_BuildOnly.cpp  Test_StdAliases_BuildOnly.cpp  Time_header_only.cpp
tools/: bench_compare.py  bench_pick_defaults.py  bench_sweep.py  bench_update_baseline.ps1  build_docs.ps1  docs_sync.py  export_architecture.ps1  memory_bench_sweep.py  package_abi_sdk.ps1  policy_lint.py  policy_lint_selftest.py  run_all_gates.ps1  wdac_assist.ps1
(+198 files in other folders)
